# moor-ai

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  package-lock.json
.github/workflows/: ci.yml
infrastructure/: package-lock.json  package.json
infrastructure/lib/: infrastructure-stack.ts
moor-ai/: moor_ai_api.py  test_api.py
pkg/bstring/: CMakeLists.txt  bstraux.c  bstraux.h  bstrlib.c  bstrlib.h
pkg/yaml-c-wrap/: CMakeLists.txt  domain.cpp  domain.h
pkg/yaml-c-wrap/include/yaml-c-wrap/: api.h
python/: setup.py
python/moor_ai/: api.py  moor_ai_api.py  test_api.py
src/: CMakeLists.txt  api.c  api.h  def.h  domain.c  domain.h  err.c  err.h  line_prop.c  line_prop.h  parse.c  parse.h  sys.h
test/: test-1.yaml
test/entry/: CMakeLists.txt  test-entry.c
